# Koan

./: .gitignore  1INCH_API_FIXES_SOLUTION.md  API_KEY_CONFIGURATION_EXPLANATION.md  AUTO_CONNECTION_IMPLEMENTATION.md  CLAUDE.md  CODE_GENERATION_FIXED.md  COMPLETE_CODE_GENERATION_SOLUTION.md  COMPLETE_DEFI_NODES_IMPLEMENTATION.md  COMPLETE_DEFI_NODES_SDK_IMPLEMENTATION.md  COMPLETE_SOLUTION_SUMMARY.md  COMPLETE_TESTING_SUMMARY.md  CRITICAL_FIX_SUMMARY.md  DEFI_DASHBOARD_EXECUTOR_ADDED.md  EMBEDDED_PREVIEW_GUIDE.md  END_TO_END_TESTING_GUIDE.md  ENHANCED_1INCH_INTEGRATION_GUIDE.md  ENHANCED_1INCH_INTEGRATION_SUMMARY.md  ENVIRONMENT_SETUP.md  ERROR_FIX_SUMMARY.md  FIREFOX_IFRAME_FIX.md  FRONTEND_ICON_FIX.md  FUNCTIONAL_TESTING_FIXES.md  FUNCTIONAL_TESTING_GUIDE.md  FUSION_MONAD_BRIDGE.md  FUSION_MONAD_BRIDGE_IMPLEMENTATION_SUMMARY.md  FUSION_MONAD_BRIDGE_TESTING_GUIDE.md  FUSION_SWAP_EXECUTOR_ADDED.md  GITHUB_CALLBACK_404_FIX.md  GITHUB_DEPLOYMENT_GUIDE.md  GITHUB_OAUTH_FIX.md  GITHUB_OAUTH_SETUP_GUIDE.md  GITHUB_OAUTH_TROUBLESHOOTING.md  HACKATHON_TEMPLATE_UPDATE.md  HOW_TO_TEST_BOTH_TEMPLATES.md  HOW_TO_TEST_CODE_GENERATION.md  HOW_TO_TEST_EVERYTHING.md  IMPLEMENTATION_GUIDE.md  LANGFLOW_MIGRATION_COMPLETE.md  LIMIT_ORDER_EXECUTOR_ADDED.md  LIQUIDITY_FIX_SUMMARY.md  (+37 more)
agents/: .cursorrules  .gitignore  README.md  app.py  env.example  main.py  plan.md  pyproject.toml  requirements.txt  test_integration.py  test_openai_integration.py  test_streamlit.py  test_system.py
agents/agents/: __init__.py  visual_architecture_agent.py
agents/models/: __init__.py  workflow_models.py
agents/src/: __init__.py  main.py
agents/test_nodes/: dummy_agents.py  dummy_nodes.py  (+2 more)
(+178 files in other folders)
