[project]
name = "unite-defi-agents"
version = "0.1.0"
description = "AI agent system for generating and executing DeFi workflows using natural language"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core HTTP and async
    "httpx>=0.25.0",
    "aiohttp>=3.8.0", 
    "pydantic>=2.0.0",
    
    # AI and Agent frameworks
    "agno>=1.7.6",
    "anthropic>=0.60.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.12",
    
    # FastAPI and server
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.8.0",
    
    # Data processing
    "pandas>=2.3.1",
    "numpy>=2.3.2",
    
    # Git integration
    "gitpython>=3.1.45",
    
    # Logging and UI
    "structlog>=23.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
